@@ -15,6 +15,7 @@ use parallel processing = False
 parallel processes = 2
 parallel chunksize = 1
 use autosave = False
+save all evals = False
 autosave interval = 10
 create trial = best_1_bin
 errorbar level = 1.05
